syntax = "proto3";

package com.example.commonmodels.order;

import "com/example/commonmodels/order/order_item.proto";
import "com/example/commonmodels/order/shipment_details.proto";

option java_multiple_files = true;

message Order {
    string id = 1;
    repeated commonmodels.order.OrderItem items = 2;
    commonmodels.order.ShipmentDetails shipment_details = 3;
    Status status = 4;
    string user_id = 5;

    enum Status {
        STATUS_UNSPECIFIED = 0;
        STATUS_NEW = 1;
        STATUS_SHIPPING = 2;
        STATUS_COMPLETED = 3;
        STATUS_CANCELED = 4;
        /*
        STATUS_UNKNOWN represents case when status in db is not valid
        Added it to separate this case and when status is default value
        */
        STATUS_UNKNOWN = 5;
    }
}
