syntax = "proto3";

package com.example.grpcapi.reqres.order;

import "com/example/commonmodels/order/order_status_update_notification.proto";

option java_multiple_files = true;

message UpdateOrderStatusRequest {
    string user_id = 1;
}
