syntax = "proto3";

package com.example.internal.input.reqreply.order;

import "com/example/commonmodels/error.proto";
import "com/example/commonmodels/order/order.proto";
import "com/example/commonmodels/order/shipment_details.proto";

option java_multiple_files = true;

message UpdateOrderRequest {
    string id = 1;
    commonmodels.order.ShipmentDetails shipment_details = 2;
}

message UpdateOrderResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        commonmodels.order.Order order = 1;
    }

    message Failure {
        string message = 100;
        oneof error {
            commonmodels.Error order_not_found = 1;
        }
    }
}
